<resources>
    <string name="app_name">Main_Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="trainingMenuHeader">Training</string>
    <string name="totalWeightHeader">Input total weight of bar:</string>
    <string name="navBarButtonContentDescription">Opens navigation menu</string>
    <string name="poundSwitchText">lb</string>
    <string name="kilogramSwitchText">kg</string>
    <string name="startWorkoutButtonContentDescription">Start Workout</string>
    <string name="enterWeightOfBarContentDescription">Enter the weight of the bar here</string>
    <string name="navViewSettings">Settings</string>
    <string name="navViewTraining">Training</string>
    <string name="navViewPastWorkouts">Past Workouts</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="exerciseTextInputHint">Enter exercise here</string>

    <!--Snackbars-->
    <string name="incorrectWeightInputSnackbar">Please enter a weight to continue</string>
    <string name="incorrectExerciseInputSnackbar">Please enter an exercise to continue</string>
    <string name="incorrectMeasurementUnitInputSnackbar">Please choose a unit of measurement (LB or KG)</string>

    <!-- Exercise Types Autofill Hints -->
    <!-- TODO Go onto bodybuilding.com and add all the different exercises to this array -->
    <string-array name="exerciseAutofillHints">
        <item>Squats</item>
        <item>Bench Press</item>
        <item>Deadlift</item>
        <item>Overhead Press</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>