<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundGrey">

    <TextView
        android:id="@+id/trainingMenuHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/trainingMenuHeader"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/totalWeightHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalWeightHeader"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/weight_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/enterWeightOfBarContentDescription"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"/>

    <AutoCompleteTextView
        android:id="@+id/exercise_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/exerciseTextInputHint"
        android:inputType="text"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:completionThreshold="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/lbMeasurementSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:text="@string/poundSwitchText"
            android:theme="@style/mainMenuSwitchStyle"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/kgMeasurementSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:text="@string/kilogramSwitchText"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:theme="@style/mainMenuSwitchStyle"/>
    </LinearLayout>
</LinearLayout>