<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/backgroundGrey"
    android:clipChildren="false"
    android:clipToPadding="false"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainMenu"
        android:background="@color/backgroundGrey"
        android:clipToPadding="false"
        android:clipChildren="false">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/startWorkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/startWorkoutButtonRed"
            android:clickable="true"
            android:contentDescription="@string/startWorkoutButtonContentDescription"
            android:focusable="true"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_play_circle_outline_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundGrey"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:clipChildren="false">

            <include layout="@layout/nav_bar_header"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:elevation="30dp">
            </include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trainingMenuHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/trainingMenuHeader"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/totalWeightHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalWeightHeader"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

                <EditText
                    android:id="@+id/plain_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48sp"
                        android:text="@string/poundSwitchText"
                        android:theme="@style/mainMenuSwitchStyle"
                        android:textColor="@color/white"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48sp"
                        android:text="@string/kilogramSwitchText"
                        android:textColor="@color/white"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:theme="@style/mainMenuSwitchStyle"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/nav_view_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start">
    </include>

</androidx.drawerlayout.widget.DrawerLayout>